Fix word wrap2.

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -10,7 +10,7 @@
 }
 
 #chatbox div span{
-  word-wrap: break-spaces;
+  word-break: break-all;
 }
 
 #users-table {
